# rust-project-showcase

./: Cargo.toml  README.md
src/: main.rs
static/: haiku_generator.html
