[package]
name = "rust-showcase-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
actix-files = "0.6.1"

[dependencies.haiku-generator]
git="https://github.com/najaco/haiku-generator.git"
branch="lib_conversion"
